# frkhashminer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  copy  docker-readme.md  test  test.conf  test.config
.circleci/: config.yml
cmake/: EthCompilerSettings.cmake
cmake/cable/defaults/: HunterCacheServers.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  Options.md  POOL_EXAMPLES_ETH.md
frankohash/: CMakeLists.txt
frankohash/include/frankohash/: frankohash.h  frankohash.hpp  hash_types.h  hash_types.hpp  keccak.h  keccak.hpp  version.h
frankohash/lib/: CMakeLists.txt
frankohash/lib/frankohash/: CMakeLists.txt  bit_manipulation.h  builtins.h  endianness.hpp  frankohash-internal.hpp  frankohash.cpp  kiss99.hpp  managed.cpp  primes.c  primes.h
frankohash/lib/keccak/: CMakeLists.txt  keccak.c  keccakf800.c
frankohash/lib/support/: attributes.h
frkhash/: CMakeLists.txt
frkhash/include/frkhash/: frkhash.h  frkhash.hpp  hash_types.h  hash_types.hpp  keccak.h  keccak.hpp  version.h
frkhash/lib/: CMakeLists.txt
frkhash/lib/frankohash/: bit_manipulation.h  endianness.hpp  frankohash.cpp  kiss99.hpp  primes.c
frkhash/lib/frkhash/: CMakeLists.txt  builtins.h  frkhash-internal.hpp  frkhash.cpp  managed.cpp  primes.c  primes.h
frkhash/lib/keccak/: CMakeLists.txt  keccak.c  keccakf800.c
frkhash/lib/support/: attributes.h
frkminer/: CMakeLists.txt  DBusInt.h  frkminer.rc  main.cpp
libapi/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libcl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt  frkhash.cl
libcpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libcuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  ethash_cuda_miner_kernel.cu  frkhash_cuda_miner_kernel.cu  frkhash_cuda_miner_kernel.h  frkhash_cuda_miner_kernel_globals.h  hash_it.cuh  keccak.cuh
libfranko/: Farm.cpp  Farm.h  FrankohashAux.cpp  FrankohashAux.h
libfrk/: CMakeLists.txt  Farm.cpp  Farm.h  FrankohashAux.cpp  FrankohashAux.h  FrkhashAux.cpp  FrkhashAux.h  Miner.cpp  Miner.h
libhwmon/: CMakeLists.txt
libpool/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h
libpool/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpool/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpool/testing/: SimulateClient.cpp  SimulateClient.h
